--- a/calico-enterprise/threat/web-application-firewall.mdx
+++ b/calico-enterprise/threat/web-application-firewall.mdx
@@ -174,7 +174,7 @@ Run a simple curl command from any pod inside your cluster targeting a service y
 
 Reviewing the default rulset config:
 
-```conf
+```bash
 Include @coraza.conf-recommended
 Include @crs-setup.conf.example
 Include @owasp_crs/*.conf
@@ -263,7 +263,7 @@ For basic customizations, it's best to add it after all the includes in `tigera.
 
 An example is adding a sampling mode. For that, the tigera.conf will look like this:
 
-```conf
+```bash
 # CoreRuleset activation
 Include @coraza.conf-recommended
 Include @crs-setup.conf.example
@@ -284,14 +284,14 @@ SecAction "id:900400,\
 
 Also you can disable certain rules here:
 
-```conf
+```bash
 # --- disable 'Request content type is not allowed by policy'
 SecRuleRemoveById 920420
 ```
 
 Change anomaly scoring threshold:
 
-```conf
+```bash
   SecAction \
   "id:900110,\
   phase:1,\
@@ -337,7 +337,7 @@ wordpress-rule-exclusions-config.conf
 
 and then tigera.conf contents should be:
 
-```conf
+```bash
 Include @coraza.conf-recommended
 
 Include /etc/modsecurity-ruleset/wordpress-rule-exclusions-config.conf
