Ruleset -> Rule Set

--- a/calico-enterprise/threat/web-application-firewall.mdx
+++ b/calico-enterprise/threat/web-application-firewall.mdx
@@ -32,7 +32,7 @@ This how-to-guide uses the following {{prodname}} features:
 
 WAF is deployed in your cluster along with Envoy DaemonSet. {{prodname}} proxies selected service traffic through Envoy, checking HTTP requests using the industry-standard
 [ModSecurity](https://owasp.org/www-project-modsecurity-core-rule-set/) with OWASP Core Rule Set v3.3.5 modified for kubernetes workloads.
-<!--To review the rules deployed with the WAF, see [Ruleset files](https://github.com/tigera/operator/tree/master/pkg/render/applicationlayer/embed/corerule set/rules).-->
+<!--To review the rules deployed with the WAF, see [Rule Set files](https://github.com/tigera/operator/tree/master/pkg/render/applicationlayer/embed/corerule set/rules).-->
 
 You simply enable WAF in Manager UI, and determine the services that you want to enable for WAF protection. By default WAF is set to `DetectionOnly` so no traffic will be denied until you are ready to turn on blocking mode.
 
@@ -182,7 +182,7 @@ Include @owasp_crs/*.conf
 SecRuleEngine DetectionOnly
 ```
 
-The configuration file starts with importing the appropriate rule set config. We use Coraza WAF's recommended [Core Ruleset setup](https://coraza.io/docs/tutorials/corerule set/) files:
+The configuration file starts with importing the appropriate rule set config. We use Coraza WAF's recommended [Core Rule Set setup](https://coraza.io/docs/tutorials/corerule set/) files:
 
 1. Coraza recommended [config](https://github.com/corazawaf/coraza/blob/main/coraza.conf-recommended)
 1. The rest of the [corerule set](https://github.com/corerule set/corerule set) files, currently [v4.0.0-rc2](https://github.com/corerule set/corerule set/tree/v4.0.0-rc2)
@@ -231,7 +231,7 @@ which then triggers a rolling restart of your L7 pods. This means that the HTTP 
 
 :::note
 
-It is important to adhere to [CoreRuleset documentation](https://corerule set.org/docs) on how to edit the behaviour of
+It is important to adhere to [CoreRule Set documentation](https://corerule set.org/docs) on how to edit the behaviour of
  your WAF. A good place to begin at is the [Installing Core Rule Set](https://corerule set.org/docs/deployment/install/).
 
 In many scenarios, the default example CRS configuration will be a good enough starting point. It is recommended to review the example configuration file before
@@ -264,7 +264,7 @@ For basic customizations, it's best to add it after all the includes in `tigera.
 An example is adding a sampling mode. For that, the tigera.conf will look like this:
 
 ```bash
-# CoreRuleset activation
+# CoreRule Set activation
 Include @coraza.conf-recommended
 Include @crs-setup.conf.example
 Include @owasp_crs/*.conf
