--- a/calico-enterprise/threat/web-application-firewall.mdx
+++ b/calico-enterprise/threat/web-application-firewall.mdx
@@ -214,7 +214,7 @@ Include /etc/modsecurity-rule set/REQUEST-*.conf
 SecRuleEngine DetectionOnly
 EOF
 
-## create the config map itself
+## create the configuration map itself
 kubectl create cm --dry-run=client --from-file=tigera.conf --from-file=coraza.conf --from-file=rules --from-file=crs-setup.conf.example -n tigera-operator modsecurity-rule set -o yaml  > rule set.configmap.yaml
 
 ## replace active configmap
@@ -356,7 +356,7 @@ SecRuleEngine DetectionOnly
 Then create and apply the configmap:
 
 ```bash
-## create the config map itself
+## create the configuration map itself
 kubectl create cm --dry-run=client \
   --from-file=tigera.conf \
   --from-file=wordpress-rule-exclusions-config.conf \
