--- a/calico-enterprise/threat/web-application-firewall.mdx
+++ b/calico-enterprise/threat/web-application-firewall.mdx
@@ -25,7 +25,7 @@ Historically, web application firewalls (WAFs) were deployed at the edge of your
 ### About {{prodname}} WAF
 
 WAF is deployed in your cluster along with Envoy DaemonSet. {{prodname}} proxies selected service traffic through Envoy, checking HTTP requests using the industry-standard
-[ModSecurity](https://owasp.org/www-project-modsecurity-core-rule-set/) with OWASP Core Rule Set `v4.0.0-rc2` with some modifications for kubernetes workloads.
+[ModSecurity](https://owasp.org/www-project-modsecurity-core-rule-set/) with OWASP Core Rule Set `v4.0.0-rc2` with some modifications for Kubernetes workloads.
 
 
 You simply enable WAF in Manager UI, and determine the services that you want to enable for WAF protection. By default WAF is set to `DetectionOnly` so no traffic will be denied until you are ready to turn on blocking mode.
@@ -48,7 +48,7 @@ This works by matching a single HTTP request against all the configured WAF rule
 WAF cannot be used with:
   - Host-networked client pods
   - TLS traffic
-  - [LoadBalancer services](https://kubernetes.io/docs/concepts/services-networking/service/#loadbalancer)
+  - [LoadBalancer services](https://Kubernetes.io/docs/concepts/services-networking/service/#loadbalancer)
   - Egress gateways
   - WireGuard on AKS or EKS (unless you apply a specific kernel variable). Contact Support for help.
 
@@ -67,7 +67,7 @@ Enabling WAF for certain system services may result in an undesired cluster stat
   - `openshift-*`
 
 - Do not enable WAF for system services with the following combination of name and namespaces:
-  - name: `kubernetes`, namespace: `default`
+  - name: `Kubernetes`, namespace: `default`
   - name: `openshift`, namespace: `default`
   - name: `gatekeeper-webhook-service`, namespace: `gatekeeper-system`
 
@@ -92,7 +92,7 @@ If you don’t have an application to test WAF with or don’t want to use it ri
 we recommend that you install the [GoogleCloudPlatform/microservices-demo app](https://github.com/GoogleCloudPlatform/microservices-demo):
 
 ```bash
-kubectl apply -f https://raw.githubusercontent.com/GoogleCloudPlatform/microservices-demo/release/v0.7.0/release/kubernetes-manifests.yaml
+kubectl apply -f https://raw.githubusercontent.com/GoogleCloudPlatform/microservices-demo/release/v0.7.0/release/Kubernetes-manifests.yaml
 ```
 
 #### Enable WAF using the CLI
@@ -225,7 +225,7 @@ For basic customizations, it's best to add it after all the includes in `tigera.
 An example is adding a sampling mode. For that, the tigera.conf will look like this:
 
 ```bash
-# coreruleset activation
+# Core Rule Set activation
 Include @coraza.conf-recommended
 Include @crs-setup.conf.example
 Include @owasp_crs/*.conf
@@ -277,7 +277,7 @@ SecAction \
 ```
 
 
-##### Using coreruleset plugins
+##### Using Core Rule Set plugins
 
 Let's go with an example plugin: [Wordpress Rule Exclusions](https://github.com/coreruleset/wordpress-rule-exclusions-plugin/).
 
