add disclaimer about algorithm
Just noting that it could change in the future.

--- a/calico_versioned_docs/version-3.27/reference/typha/overview.mdx
+++ b/calico_versioned_docs/version-3.27/reference/typha/overview.mdx
@@ -38,3 +38,9 @@ Typha Replicas per Node Count
 | `<2000` | 12 |
 | `...` |   |
 | `<3600` | 20 |
+
+:::note
+
+This algorithm may change as needs evolve.
+
+:::
