update release notes details to start with latest patch

--- a/calico-enterprise_versioned_docs/version-3.18/release-notes/index.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18/release-notes/index.mdx
@@ -91,13 +91,7 @@ For more information, see [link](https://docs.tigera.io).
 
 ## Release details
 
-### Calico Enterprise 3.18.0 (early preview)
-
-1 September 2023
-
-Calico Enterprise 3.18.0 is now available as an early preview release.
-This release is for previewing and testing purposes only.
-It is not supported for use in production.
+To update an existing installation of {{prodname}} 3.18, see [Install a patch release](../getting-started/manifest-archive.mdx).
 
 ### Calico Enterprise 3.18.0-1.1 (early preview)
 
@@ -108,3 +102,11 @@ This release is for previewing and testing purposes only.
 It is not supported for use in production.
 
 This release includes improvements and bug fixes.
+
+### Calico Enterprise 3.18.0 (early preview)
+
+1 September 2023
+
+Calico Enterprise 3.18.0 is now available as an early preview release.
+This release is for previewing and testing purposes only.
+It is not supported for use in production.
