--- a/calico/release-notes/index.mdx
+++ b/calico/release-notes/index.mdx
@@ -24,13 +24,9 @@ Learn about the new features, bug fixes, and other updates in this release of {{
 
 ## Release details
 
-### Calico Open Source 3.28.0 general availability release
-
-DD November 2023
-
-Calico Open Source release 3.28.0 is now generally available.
-
 <!--
+To update an existing installation of Calico Open Source 3.28, see [the upgrade guides](../operations/upgrading/index.mdx).
+
 ### Calico Open Source 3.28.1 bux fix update
 
 DD M YYYY
@@ -39,8 +35,10 @@ DD M YYYY
 
 #### Bug fixes
 
-#### How to update
-
-To update an existing installation of Calico Enterprise 3.18, see .
-
 -->
+
+### Calico Open Source 3.28.0 general availability release
+
+DD November 2023
+
+Calico Open Source release 3.28.0 is now generally available.
