change 'Export YAML' to 'Download YAML'

--- a/calico-cloud/users/create-and-assign-custom-roles.mdx
+++ b/calico-cloud/users/create-and-assign-custom-roles.mdx
@@ -74,7 +74,7 @@ Importing custom roles is fully supported on managed clusters running Calico Clo
 
 1. From the cluster menu in the Calico Cloud Manager UI, select the managed cluster that has the custom roles you want to export.
 1. Click the user icon <IconUser width="20"/> > **Manage Team**.
-1. Under the **Roles** tab, click **Export Custom Roles** and select **Export YAML** to download the custom role definitions.
+1. Under the **Roles** tab, click **Export Custom Roles** and select **Download YAML** to download the custom role definitions.
 This file contains definitions for all the custom roles you created in this cluster.
 1. For each managed cluster you want to apply the custom roles to, run the following command:
 
