--- a/calico-enterprise/reference/resources/stagedglobalnetworkpolicy.mdx
+++ b/calico-enterprise/reference/resources/stagedglobalnetworkpolicy.mdx
@@ -162,20 +162,26 @@ process it more efficiently.  Currently only one hint is defined:
 | Kubernetes API datastore | Yes           | Yes    | Yes      |
 
 #### List filtering on tiers
-List and Watch operations may specify label selector or field selector to filter StagedGlobalNetworkPolicies on tiers returned by the API server.
-When no selector is specified the API server returns all StagedGlobalNetworkPolicies from all tiers that the user has access to.
+
+List and watch operations may specify label selectors or field selectors to filter `StagedGlobalNetworkPolicy` resources on tiers returned by the API server.
+When no selector is specified, the API server returns all `StagedGlobalNetworkPolicy` resources from all tiers that the user has access to.
 
 ##### Field selector
-When using the field selector, supported operators are = and ==
 
-Example to retrieve all StagedGlobalNetworkPolicies in default tier:
-```
+When using the field selector, supported operators are `=` and `==`
+
+The following example shows how to retrieve all `StagedGlobalNetworkPolicy` resources in the default tier:
+
+```bash
 kubectl get stagedglobalnetworkpolicy --field-selector spec.tier=default
 ```
 
 ##### Label selector
-When using the label selector, supported operators are =, == and IN
 
-Example to retrieve all StagedGlobalNetworkPolicies in default and net-sec tier:
-```
+When using the label selector, supported operators are `=`, `==` and `IN`.
+
+The following example shows how to retrieve all `StagedGlobalNetworkPolicy` resources in the `default` and `net-sec` tiers:
+
+```bash
 kubectl get stagedglobalnetworkpolicy -l 'projectcalico.org/tier in (default, net-sec)'
+```
