--- a/calico-enterprise/reference/resources/globalnetworkpolicy.mdx
+++ b/calico-enterprise/reference/resources/globalnetworkpolicy.mdx
@@ -189,21 +189,26 @@ Application layer policy match criteria are supported with the following restric
 | Kubernetes API datastore | Yes           | Yes    | Yes      |
 
 #### List filtering on tiers
-List and Watch operations may specify label selector or field selector to filter GlobalNetworkPolicies on tiers returned by the API server.
-When no selector is specified the API server returns all GlobalNetworkPolicies from all tiers that the user has access to.
+
+List and watch operations may specify label selectors or field selectors to filter `GlobalNetworkPolicy` resources on tiers returned by the API server.
+When no selector is specified, the API server returns all `GlobalNetworkPolicy` resources from all tiers that the user has access to.
 
 ##### Field selector
-When using the field selector, supported operators are = and ==
 
-Example to retrieve all GlobalNetworkPolicies in default tier:
-```
+When using the field selector, supported operators are `=` and `==`
+
+The following example shows how to retrieve all `GlobalNetworkPolicy` resources in the default tier:
+
+```bash
 kubectl get globalnetworkpolicy --field-selector spec.tier=default
 ```
 
 ##### Label selector
-When using the label selector, supported operators are =, == and IN
 
-Example to retrieve all GlobalNetworkPolicies in default and net-sec tier:
-```
+When using the label selector, supported operators are `=`, `==` and `IN`.
+
+The following example shows how to retrieve all `GlobalNetworkPolicy` resources in the `default` and `net-sec` tiers:
+
+```bash
 kubectl get globalnetworkpolicy -l 'projectcalico.org/tier in (default, net-sec)'
 ```
