Add release note for EKS cloudWatch logs bug fix

--- a/calico-enterprise_versioned_docs/version-3.17/_includes/release-notes/_v3.17.4-release-notes.mdx
+++ b/calico-enterprise_versioned_docs/version-3.17/_includes/release-notes/_v3.17.4-release-notes.mdx
@@ -4,6 +4,6 @@ DD March 2024
 -
 
 ### Bug fixes
--
+- Fetching Kubernetes audit logs from EKS CloudWatch does not work.
 
 ### Known issues {#known-issues-3.17.4}
