RN and releases.json updates for 3.17.4

--- a/calico-enterprise_versioned_docs/version-3.17/_includes/release-notes/_v3.17.4-release-notes.mdx
+++ b/calico-enterprise_versioned_docs/version-3.17/_includes/release-notes/_v3.17.4-release-notes.mdx
@@ -1,9 +1,12 @@
-DD March 2024
+13 March 2024
 
 ### Improvements
--
+
+* Reduced the validity of JWTs issued by Dex to 15 minutes (down from 24 hours).
+* Added a configurable option for `priorityClassName` to the egress gateway CRD.
+* Policy recommendation excludes Openshift namespaces by default.
 
 ### Bug fixes
--
 
-### Known issues {#known-issues-3.17.4}
+* Fixed a bug introduced in v3.17.3 that stopped the `eks-log-forwarder` deployment from starting.
+* If kube-controllers metric port is set to 0, no ingress rule will be created.
