DOCS-2141: Updates screenshot for new Grafana dashboard

--- a/calico/operations/monitor/monitor-component-visual.mdx
+++ b/calico/operations/monitor/monitor-component-visual.mdx
@@ -12,7 +12,7 @@ Use Grafana dashboard to view {{prodname}} component metrics.
 
 Using Grafana can be beneficial by providing a means to visualize metrics through graphs that can help you quickly identify unusual activity. The following image shows some of the graphs and metrics that are available for you to leverage to achieve this goal.
 
-![](/img/calico/grafana-dashboard.png)
+![](/img/calico/grafana-dashboard_3.28.png)
 
 ## Concepts
 
